--- a/src/components/modals/SettingsModal/SettingsModal.scss
+++ b/src/components/modals/SettingsModal/SettingsModal.scss
@@ -1,32 +1,5 @@
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+@import '../_shared';
 
 .settings-modal {
-  animation: fadeInUp 0.3s ease-out;
-
-  .header {
-    font-family: Helvetica, Arial, sans-serif !important;
-  }
-
-  &.dark {
-    background-color: #1b1c1d;
-    color: #ffffff;
-
-    .header, .content {
-      background-color: #1b1c1d;
-      color: #ffffff;
-    }
-
-    .close.icon {
-      color: #ffffff;
-    }
-  }
+  @extend %modal-base;
 }
