--- a/src/components/stats/StatsModal/StatsModal.scss
+++ b/src/components/stats/StatsModal/StatsModal.scss
@@ -1,32 +1,9 @@
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
+@import '../../modals/_shared';
 
 .stats-modal {
-  animation: fadeInUp 0.3s ease-out;
+  @extend %modal-base;
 
-  .header, .content {
+  .content {
     font-family: Helvetica, Arial, sans-serif !important;
-  }
-
-  &.dark {
-    background-color: #1b1c1d;
-    color: #ffffff;
-
-    .header, .content {
-      background-color: #1b1c1d;
-      color: #ffffff;
-    }
-
-    .close.icon {
-      color: #ffffff;
-    }
   }
 }
